fix: enlarge image to remove spill from blur

--- a/www/css/login.css
+++ b/www/css/login.css
@@ -13,18 +13,12 @@ body {
 }
 
 .background {
-  display: flex;
   background-image: url('../Media/wallpaper4.png');
   image-rendering: pixelated;
   background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
   position: fixed;
-  height: 100vh;
-  width: 100vw;
-  top: 0;
-  left: 0;
+  height: 105vh;
+  width: 105vw;
   filter: blur(5px);
   z-index: -1;
   overflow: hidden;
